# ai-notes

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_events.py  003_user_profile_facts.py  004_dedup_profile_facts.py  005_agent_settings.py  006_chat_sessions.py  007_agent_settings_model.py  008_notes_deleted_at.py  009_tasks.py  010_enabled_tools.py  011_tags.py  012_task_deadlines.py  013_note_links.py  014_note_versions.py  015_telegram_links.py  016_task_status.py  017_pinned_notes.py  018_saved_messages.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/agent/: __init__.py  base_executor.py  chat_executor.py  dispatcher.py  event_executor.py  intent_classifier.py  notes_executor.py  task_executor.py
backend/app/middleware/: rate_limit.py
backend/app/models/: __init__.py  agent_settings.py  chat_session.py  event.py  folder.py  note.py  note_link.py  note_version.py  saved_message.py  tag.py  user.py  user_profile_fact.py
backend/app/routers/: agent.py  auth.py  batch_notes.py  chat.py  events.py  export_router.py  folders.py  notes.py  saved_messages.py  search.py  tags.py  tasks.py  telegram.py  transcribe.py  websocket.py
backend/app/schemas/: __init__.py  agent.py  auth.py  chat.py  event.py  folder.py  note.py  saved_message.py  tag.py
backend/app/services/: agent.py  agent_settings_service.py  auth.py  chat_agent.py  embeddings.py  llm.py  note_links.py  note_versions.py  notes_tree.py  (+6 more)
(+100 files in other folders)
